Fix profile header wrapping

--- a/static/mobilediscord.css
+++ b/static/mobilediscord.css
@@ -844,6 +844,10 @@ img.flexChild-faoVW3 {
     justify-content: flex-end;
 }
 
+.headerInfo-30uryT {
+    flex-basis: auto;
+}
+
 .tabBarContainer-1s1u-z {
     overflow: auto;
     display: flex;
